--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,14 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
-}
+@layer components {
+    .gotoButton{
+        @apply px-6 py-2 border border-blue-700/5 rounded-full uppercase text-sm tracking-widest text-black transition-all hover:border-blue-900 hover:text-gray-700
+    }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+    .contactInput{
+        @apply outline-none bg-slate-400/10 rounded-sm border-b py-4 border-blue-500 text-black placeholder-gray-500 transition-all focus:border-blue-800 focus:text-blue-500
+    }
 }
